# MPS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
main/: CMakeLists.txt
main/inputData/: inputData.cpp  inputData.h
main/node/: node.cpp  node.h
main/operation/: operation.cpp  operation.h
main/parser/: .~lock.[AVE_INT] 2_1.CSV#  parser.cpp  parser.h
main/randomTree/: randomTree.cpp  randomTree.h
main/solution/: Makefile  main.cpp  script.py
main/tests/: CMakeLists.txt  test_file.csv  test_parser.cpp  test_parser.h  tests.cpp  tests.h
mps-global/: Legenda MPS-Global.CSV
mps-global/MPS-Global/: [S-MS]z45-F1s.CSV  [S-MS]z45-F2s.CSV  [S-MS]z45-F3s.CSV  [S-MS]z45-F4s.CSV  [S-MS]z45-F5s.CSV  [S-MS]z45-F6s.CSV  [S-MS]z45-F7s.CSV  [S-MS]z45-F8s.CSV
resources/: CodingStyle.txt  RaportAdministrativ.txt  ScenariiMinimaleDeTest.txt
test/: mytests.cpp  test_parser.cpp  test_parser.h
tests/: CMakeLists.txt  test_parser.cpp  test_parser.h
